[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gbm"
version = "0.1.0"
description = "Score-based diffusion model for synthetic S&P 500 return / log-price trajectories, evaluated on financial stylized facts."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "gbm contributors" }]
keywords = [
    "diffusion",
    "score-matching",
    "generative",
    "finance",
    "time-series",
    "stylized-facts",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "pandas>=2.0",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "joblib>=1.3",
    "yfinance>=0.2.30",
    "powerlaw>=1.5",
    "lxml>=4.9",        # required by pandas.read_html for the S&P 500 table
    "requests>=2.31",   # explicit dep for data_download.py SSL-via-certifi fetch
    "certifi>=2023.7",  # CA bundle used by data_download.py
]

[project.optional-dependencies]
efficient-attention = ["linear-attention-transformer>=0.19"]
dev = [
    "ruff>=0.4",
    "ipython>=8.12",
]

[project.urls]
Homepage = "https://github.com/"

[tool.setuptools]
# The project is a flat collection of scripts rather than a package.
py-modules = [
    "arrow_plot",
    "csv_to_plot_result",
    "data_download",
    "generate",
    "losses",
    "model_config",
    "networks",
    "ori_plot_result",
    "plot_result",
    "train",
    "utils",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",  # long lines — tolerated in research code
    "E741",  # ambiguous variable name (l, I are common in math code)
]

[tool.ruff.format]
quote-style = "double"
